I did color in CSS

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+    <link rel="stylesheet" href="style.css">
 <head>
     <title>My favorite things</title>
 </head>
 <body>
-    <h1 style="color:blue;background-color:hotpink">My favorite things</h1>
+    <h1>My favorite things</h1>
+    <h2>Beer</h2>
 </body>
 </html>
