Change font size and colors using CSS

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 <body>
     <h1>My favorite things</h1>
     <h2>Beer</h2>
+    <p>This is a paragraph</p>
+    <ul>
+        <li>potatoes</li>
+        <li>Tomatoes</li>
+    </ul>
 </body>
 </html>
