--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
     <link rel="stylesheet" href="style.css">
 <head>
     <title>My favorite things</title>
